ISIS-2871: more semantics provider house keeping